--- a/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
+++ b/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MovieGalleryApp.Core\MovieGalleryApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
