Moved Data folder to Infrastructure.

--- a/MovieGalleryApp.Web/appsettings.json
+++ b/MovieGalleryApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MovieGalleryApp.Web-61E8AE49-48D0-4D68-B313-2D95ABD8E45F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=MovieGalleryDB;User Id=sa;Password=SoftUn!2021;"
   },
   "Logging": {
     "LogLevel": {
