Added required static files for the admin area.

--- a/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
+++ b/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\MovieGalleryApp.Core\MovieGalleryApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\Home\" />
+  </ItemGroup>
+
 </Project>
