Added the functionality of movies showing up on the main page by genre.

--- a/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
+++ b/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
@@ -29,10 +29,10 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Home\" />
-    <Folder Include="Areas\Movie\Controllers\" />
-    <Folder Include="Areas\Movie\Data\" />
-    <Folder Include="Areas\Movie\Models\" />
-    <Folder Include="Areas\Movie\Views\" />
+    <Folder Include="Areas\TVShow\Controllers\" />
+    <Folder Include="Areas\TVShow\Data\" />
+    <Folder Include="Areas\TVShow\Models\" />
+    <Folder Include="Areas\TVShow\Views\" />
   </ItemGroup>
 
 </Project>
