--- a/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
+++ b/MovieGalleryApp.Web/MovieGalleryApp.Web.csproj
@@ -29,10 +29,7 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Home\" />
-    <Folder Include="Areas\TVShow\Controllers\" />
-    <Folder Include="Areas\TVShow\Data\" />
-    <Folder Include="Areas\TVShow\Models\" />
-    <Folder Include="Areas\TVShow\Views\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
