--- a/MovieGalleryApp.Tests/MovieGalleryApp.Tests.csproj
+++ b/MovieGalleryApp.Tests/MovieGalleryApp.Tests.csproj
@@ -8,10 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MovieGalleryApp.Web\MovieGalleryApp.Web.csproj" />
   </ItemGroup>
 
 </Project>
